--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,5 @@
-html,body,h4,p{
-    padding:0;margin: 0;width:100%;height:100%;
+html,body,h4,p,ul,li{
+    padding:0;margin: 0;width:100%;height:100%;list-style: none;
 }
 body{
     overflow: hidden;
@@ -82,6 +82,7 @@ header{
     left: 0;
     width: 100%;
     height: 1000px;
+    animation: cloudmove 100s linear infinite;
 }
 .cloud2{
     background: url("../img/cloud_2_a186193.png") repeat;
@@ -162,7 +163,7 @@ header{
     border-radius: 5px;
     background: #4ebffc;
     position: absolute;
-    right: 183px;
+    right: 12%;
     top:110px;    padding: 0 20px;
     box-sizing: border-box;
 }
@@ -452,10 +453,59 @@ section:nth-child(4) .tree{
 }
 section:nth-child(4) .top{
     position: absolute;
-    width: 75%;
     top:120px;
     left: 210px;
     width: 275px;
     height: 245px;
     background: url(../img/bubble_3b0f897.png);
+}
+
+
+.btn-wrap{
+    color: rgb(0, 0, 0);
+    margin-top: -43.5px;
+    right: 17px;
+    opacity: .5;
+    position: fixed;
+    z-index: 100;
+    top: 50%;
+}
+.btn-wrap li{
+    display: block;
+    width: 14px;
+    height: 13px;
+    margin: 7px;
+    position: relative;
+}
+.btn-wrap li a{
+    display: block;
+    position: relative;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+    text-decoration: none;
+}
+.btn-wrap li a span{
+    top: 2px;
+    left: 2px;
+    width: 8px;
+    height: 8px;
+    border: 1px solid #000;
+    background: rgba(0,0,0,0);
+    border-radius: 50%;
+    position: absolute;
+    z-index: 1;
+    box-sizing: content-box;
+}
+.bottom-btn{
+    display: block;
+    width: 30px;
+    height: 26px;
+    background: url(../img/arrow_aad9b25.png);
+    position: absolute;
+    left: 0;
+    right:0;margin:0 auto;
+    bottom:42px;
+
 }
