--- a/css/index.css
+++ b/css/index.css
@@ -84,6 +84,17 @@ header{
     height: 1000px;
     animation: cloudmove 100s linear infinite;
 }
+@keyframes cloudmove{
+    0% {
+        background-position: 2000px 0;
+    }
+    50% {
+    background-position: 0 0;
+    }
+    100% {
+        background-position: -2000px 0;
+    }
+}
 .cloud2{
     background: url("../img/cloud_2_a186193.png") repeat;
     position: absolute;
@@ -91,6 +102,7 @@ header{
     left: 0;
     width: 100%;
     height: 400px;
+    animation: cloudmove 100s linear infinite;
 }
 .cloud3{
     background: url("../img/cloud_3_5ee0340.png") repeat;
@@ -99,6 +111,7 @@ header{
     left: 0;
     width: 100%;
     height: 400px;
+    animation: cloudmove 100s linear infinite;
 }
 .page1-bottom{
     position: absolute;
@@ -155,6 +168,18 @@ header{
     width: 119px;
     height: 78px;
     background: url(../img/flight_ade8ee2.png);
+    animation: flight 3s infinite;
+}
+@keyframes flight {
+    0% {
+        top: -10px;
+    }
+    40% {
+        top: -20px;
+    }
+    100% {
+        top: -10px;
+    }
 }
 
 .login{
@@ -313,6 +338,19 @@ header{
     position: absolute;
     top:200px;
     left: 20px;
+    animation: y-ain 2s infinite;
+    transform-style: preserve-3d;
+}
+@keyframes y-ain {
+    0% {
+        transform: rotateY(0);
+    }
+    40% {
+        transform: rotateY(0);
+    }
+    100% {
+        transform: rotateY(360deg);
+    }
 }
 .content{
     position: absolute;left: 106px;
@@ -507,5 +545,25 @@ section:nth-child(4) .top{
     left: 0;
     right:0;margin:0 auto;
     bottom:42px;
-
+    animation: arrowGo 1s infinite steps(10,end);
+}
+@keyframes arrowGo {
+    0% {
+        opacity: 1;
+        transform-origin: center center;
+        transform: translate(-50%,0);
+        bottom: 42px;
+    }
+    50% {
+        opacity: .5;
+        transform-origin: center center;
+        transform: translate(-50%,0);
+        bottom: 36px;
+    }
+    100% {
+        opacity: 1;
+        transform-origin: center center;
+        transform: translate(-50%,0);
+        bottom: 42px;
+    }
 }
