--- a/css/index.css
+++ b/css/index.css
@@ -12,7 +12,7 @@ header{
     z-index: 10;
 }
 .header{
-    width: 75%;
+    width: 1000px;
     margin: 0 auto;
     display: flex;
     height: 60px;
@@ -55,6 +55,65 @@ header{
 }
 .last:nth-of-type(8){
     color: #FFDA28;
+}
+.max{
+    display: none;
+}
+.menu{
+    position: absolute;
+    top:60px;width:100%;
+    /*transform-style: preserve-3d;*/
+}
+.menu-option{
+    width: 40px;
+    height:40px;position: absolute;
+    top:10px;
+    right:0;
+}
+
+.menu-option-tline{
+    width: 30px;height: 2px;background: #fff;
+    position: absolute;
+    top:12px;
+    transition: transform 0.5s ease;
+}
+.menu-option-bline{
+    width: 30px;height: 2px;background: #fff;
+    position: absolute;
+    bottom:12px;
+    transition: transform 0.5s ease;
+}
+.menu a{
+    display: block;
+    margin: 0;
+    width:100%;background: #168bd8;
+    line-height: 40px;
+    text-align: center;
+    opacity: 0;
+}
+@keyframes menu {
+    0%{
+        opacity:0;transform: rotateX(90deg);
+    }
+    100%{
+        opacity:1;transform: rotateX(0deg);
+    }
+}
+@keyframes menu1 {
+    0%{
+        opacity:1;transform: rotateX(0deg);
+    }
+    100%{
+        opacity:0;transform: rotateX(90deg);
+    }
+}
+@media screen and (min-width:800px) {
+    .max{
+        display: flex;
+    }
+    .min{
+        display: none;
+    }
 }
 #fullpage{
     width: 100%;  height:100%;
