--- a/css/index.css
+++ b/css/index.css
@@ -125,6 +125,12 @@ header{
 #fullpage>section:nth-child(1){
     background: url("../img/bg-0_c25cb21.jpg");
 }
+.container,.row{
+    height: 100%;
+}
+.col-m-6{
+    height: 100%;
+}
 #fullpage>section:nth-child(2){
     background: url("../img/bg-1_e29bcfa.jpg");
 }
@@ -161,7 +167,7 @@ header{
     left: 0;
     width: 100%;
     height: 400px;
-    animation: cloudmove 100s linear infinite;
+    animation: cloudmove 280s linear infinite;
 }
 .cloud3{
     background: url("../img/cloud_3_5ee0340.png") repeat;
@@ -170,7 +176,7 @@ header{
     left: 0;
     width: 100%;
     height: 400px;
-    animation: cloudmove 100s linear infinite;
+    animation: cloudmove 600s linear infinite;
 }
 .page1-bottom{
     position: absolute;
@@ -217,8 +223,8 @@ header{
     width: 501px;
     height: 158px;
     background: url(../img/launch_deea86c.png);
-    left: 183px;
-    top: -400px;
+    left: 0;
+    top: 120px;
 }
 .flight{
     position: absolute;
@@ -247,10 +253,11 @@ header{
     border-radius: 5px;
     background: #4ebffc;
     position: absolute;
-    right: 12%;
-    top:110px;    padding: 0 20px;
+    right: 0;
+    top:130px;    padding: 0 20px;
     box-sizing: border-box;
 }
+
 .login form{
     padding-top: 26px;
 
@@ -388,8 +395,21 @@ header{
     font-family: 'Microsoft Yahei';
     color: #fff;
     width: 500px;
+    transform: translateX(-50px);
+    opacity: 0;
+    transition:transform 1s ease, opacity 1s ease;
 }
-.center .title{
+@media screen and (max-width: 1000px){
+    .login{
+        left: 0;
+        right:0;bottom: 0;top: 0;margin: auto;
+    }
+    .con-wrap{
+        left: 0;
+        right:0;bottom: 0;top: 0;margin: auto;
+    }
+}
+.container .title{
     background: url(../img/h_lingxian_221f2d8.png) no-repeat;
     width: 66px;
     height: 126px;
@@ -431,12 +451,15 @@ header{
 .tree{
     position: absolute;
     visibility: visible;
-    right: 26px;
+    right: 0;
     opacity: 1;
     width: 444px;
     height: 427px;
     background: url(../img/brain_36a156f.png);
     top: 100px;
+    transform: translateX(50px);
+    opacity: 0;
+    transition:transform 1s ease, opacity 1s ease;
 }
 .page2-bottom{
     position: absolute;
