--- a/css/less.css
+++ b/css/less.css
@@ -36,6 +36,7 @@
 .container > .row > .col-s-1 {
   float: left;
   width: 8.33333333%;
+  position: relative;
 }
 .container-fluid > .row > .col-s-1 {
   float: left;
@@ -44,6 +45,7 @@
 .container > .row > .col-s-2 {
   float: left;
   width: 16.66666667%;
+  position: relative;
 }
 .container-fluid > .row > .col-s-2 {
   float: left;
@@ -52,6 +54,7 @@
 .container > .row > .col-s-3 {
   float: left;
   width: 25%;
+  position: relative;
 }
 .container-fluid > .row > .col-s-3 {
   float: left;
@@ -60,6 +63,7 @@
 .container > .row > .col-s-4 {
   float: left;
   width: 33.33333333%;
+  position: relative;
 }
 .container-fluid > .row > .col-s-4 {
   float: left;
@@ -68,6 +72,7 @@
 .container > .row > .col-s-5 {
   float: left;
   width: 41.66666667%;
+  position: relative;
 }
 .container-fluid > .row > .col-s-5 {
   float: left;
@@ -76,6 +81,7 @@
 .container > .row > .col-s-6 {
   float: left;
   width: 50%;
+  position: relative;
 }
 .container-fluid > .row > .col-s-6 {
   float: left;
@@ -84,6 +90,7 @@
 .container > .row > .col-s-7 {
   float: left;
   width: 58.33333333%;
+  position: relative;
 }
 .container-fluid > .row > .col-s-7 {
   float: left;
@@ -92,6 +99,7 @@
 .container > .row > .col-s-8 {
   float: left;
   width: 66.66666667%;
+  position: relative;
 }
 .container-fluid > .row > .col-s-8 {
   float: left;
@@ -100,6 +108,7 @@
 .container > .row > .col-s-9 {
   float: left;
   width: 75%;
+  position: relative;
 }
 .container-fluid > .row > .col-s-9 {
   float: left;
@@ -108,6 +117,7 @@
 .container > .row > .col-s-10 {
   float: left;
   width: 83.33333333%;
+  position: relative;
 }
 .container-fluid > .row > .col-s-10 {
   float: left;
@@ -116,6 +126,7 @@
 .container > .row > .col-s-11 {
   float: left;
   width: 91.66666667%;
+  position: relative;
 }
 .container-fluid > .row > .col-s-11 {
   float: left;
@@ -124,6 +135,7 @@
 .container > .row > .col-s-12 {
   float: left;
   width: 100%;
+  position: relative;
 }
 .container-fluid > .row > .col-s-12 {
   float: left;
@@ -135,12 +147,13 @@
 /*中屏*/
 @media screen and (min-width: 1000px) {
   .container {
-    width: 90%;
+    width: 1000px;
     margin: auto;
   }
   .container > .row > .col-m-1 {
     float: left;
     width: 8.33333333%;
+    position: relative;
   }
   .container-fluid > .row > .col-m-1 {
     float: left;
@@ -149,6 +162,7 @@
   .container > .row > .col-m-2 {
     float: left;
     width: 16.66666667%;
+    position: relative;
   }
   .container-fluid > .row > .col-m-2 {
     float: left;
@@ -157,6 +171,7 @@
   .container > .row > .col-m-3 {
     float: left;
     width: 25%;
+    position: relative;
   }
   .container-fluid > .row > .col-m-3 {
     float: left;
@@ -165,6 +180,7 @@
   .container > .row > .col-m-4 {
     float: left;
     width: 33.33333333%;
+    position: relative;
   }
   .container-fluid > .row > .col-m-4 {
     float: left;
@@ -173,6 +189,7 @@
   .container > .row > .col-m-5 {
     float: left;
     width: 41.66666667%;
+    position: relative;
   }
   .container-fluid > .row > .col-m-5 {
     float: left;
@@ -181,6 +198,7 @@
   .container > .row > .col-m-6 {
     float: left;
     width: 50%;
+    position: relative;
   }
   .container-fluid > .row > .col-m-6 {
     float: left;
@@ -189,6 +207,7 @@
   .container > .row > .col-m-7 {
     float: left;
     width: 58.33333333%;
+    position: relative;
   }
   .container-fluid > .row > .col-m-7 {
     float: left;
@@ -197,6 +216,7 @@
   .container > .row > .col-m-8 {
     float: left;
     width: 66.66666667%;
+    position: relative;
   }
   .container-fluid > .row > .col-m-8 {
     float: left;
@@ -205,6 +225,7 @@
   .container > .row > .col-m-9 {
     float: left;
     width: 75%;
+    position: relative;
   }
   .container-fluid > .row > .col-m-9 {
     float: left;
@@ -213,6 +234,7 @@
   .container > .row > .col-m-10 {
     float: left;
     width: 83.33333333%;
+    position: relative;
   }
   .container-fluid > .row > .col-m-10 {
     float: left;
@@ -221,6 +243,7 @@
   .container > .row > .col-m-11 {
     float: left;
     width: 91.66666667%;
+    position: relative;
   }
   .container-fluid > .row > .col-m-11 {
     float: left;
@@ -229,6 +252,7 @@
   .container > .row > .col-m-12 {
     float: left;
     width: 100%;
+    position: relative;
   }
   .container-fluid > .row > .col-m-12 {
     float: left;
